# sandman

./: README.md  package-lock.json  package.json  vite.config.ts
apps/server/: package.json
apps/server/src/: index.ts
apps/web/: package.json
apps/web/src/: App.tsx  index.css
apps/web/src/components/board/: Column.tsx  KanbanBoard.tsx  StoryCard.tsx
apps/web/src/data/: mock_stories.ts
apps/web/src/lib/: api.ts
docs/: 01_overview.md  02_prd.md  03_architecture.md  04_agents.md  05_backend_tasks.md  06_frontend_tasks.md  07_runner_tasks.md  UI _Plan.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  config.rs  db.rs  lib.rs  llm.rs  prompts.rs  rag.rs  tools.rs  utils.rs
src/components/: ArtifactsList.tsx  CodeEditor.tsx  FileExplorer.tsx  KanbanBoard.tsx  SettingsView.tsx  SidebarChat.tsx  TerminalPanel.tsx
src/components/kanban/: KanbanColumn.tsx  StoryCard.tsx  StoryModal.tsx
